examples/cockroachdb-tls-ingress/spicedb/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: example-ingress
  namespace: spicedb
spec:
  includes:
  - name: example
    namespace: spicedb
  - name: example-reflection
    namespace: spicedb
  virtualhost:
    fqdn: "localhost"
    tls:
      secretName: ingress-tls
