examples/cockroachdb-tls-ingress/spicedb/spicedb.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: spicedb
  name: spicedb
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: example
  namespace: spicedb
spec:
  routes:
  - conditions:
    - prefix: "/authzed.api.v1"
    services:
    - name: example
      port: 50051
      protocol: h2
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: example-reflection
  namespace: spicedb
spec:
  routes:
  - conditions:
    - prefix: "/grpc.reflection."
    services:
    - name: example
      port: 50051
      protocol: h2
